k8s/ingress-service-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /api/auth/$2
spec:
  ingressClassName: nginx
  rules:
    - host: levomart.local
      http:
        paths:
          - path: /api/internal/payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 8081
          - path: /api/internal/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api/internal/cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 8081
          - path: /api/internal/products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 4000
          - path: /api/internal/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 4000
            # BFF & frontend
          # - path: /api(/|$)(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: client-service
          #       port:
          #         number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
